plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tomatoma'
version = '1.0.0'
description = 'Trend Food Search and Location Finder Service'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

configurations {
    mockitoAgent
}

dependencies {
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'org.jsoup:jsoup:1.17.2'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.postgresql:postgresql:42.7.1'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
    mockitoAgent('org.mockito:mockito-core') { transitive = false }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-Dnet.bytebuddy.experimental=true'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

springBoot {
    mainClass = 'com.tomatoma.TomatomaApplication'
}

test {
    useJUnitPlatform()
    jvmArgs("-javaagent:${configurations.mockitoAgent.singleFile}")
}
